fix issue of scrollbar

--- a/sass/components/studylegend.scss
+++ b/sass/components/studylegend.scss
@@ -320,7 +320,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        z-index: 9999;
+        z-index: 2;
         @include themify($themes) {
             color: themed('IndicatorInfoText');
             background: themed('IndicatorInfoBg');
